--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, ROLLING, MAIN
+log4j.rootLogger=INFO, ROLLING, MAIN
 
 log4j.appender.MAIN=org.apache.log4j.ConsoleAppender
 log4j.appender.MAIN.layout=org.apache.log4j.PatternLayout
